| Summary: | ASTERISK-26083: ARI: Announcer channels staying around after playback to a bridge is finished | ||||
| Reporter: | Per Jensen (pjensen00) | Labels: | |||
| Date Opened: | 2016-06-03 17:39:26 | Date Closed: | 2016-06-20 11:42:00 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_stasis_playback | ||
| Versions: | 13.9.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) asterisk_log.txt | |||
| Description: | h1. Summary
When using the {{play}} feature on a bridge, the announcer channel does not go away when the playback is finished or when the bridge is destroyed. After the first sound has finished playing, all subsequent attempts to play tones or sounds to the bridge will fail with a '500 - Internal Server Error, Allocation Failed' I have not noticed this issue prior to version 13.9.1 Log file is an example of the issue h1. Steps I use to reproduce. 1. Start Stasis app with a PJSIP channel 2. Create bridge of type 'simple_mixing' 3. Add channel to bridge 4. Use [play|https://wiki.asterisk.org/wiki/display/AST/Asterisk+13+Bridges+REST+API#Asterisk13BridgesRESTAPI-play] from the bridges REST API to play "tone:ring" 5. Stop the tone 6. Play "tone:congestion" (or really any other tone) - 500 happens here 7. Hang up channel 8. Destroy bridge 9. Exit stasis The announcer channel will still be there. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-06-03 17:39:27.572-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||||